--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "vue-admin-template",
-  "version": "4.2.1",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
-  "license": "MIT",
+  "name": "drugmanager-frontend",
+  "version": "0.0.1",
+  "description": "My drug manager system's frontend.",
+  "author": "Ye Minghui <MH_C_Y@163.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
